# VulVoxOptimizationProject

./: .gitignore  .release-please-manifest.json  README.md  VulVoxOptimizationProject.sln
.github/workflows/: build_multiplatform.yml  release-please.yml
OptimizationPlayground/: OptimizationPlayground.cpp  OptimizationPlayground.vcxproj  OptimizationPlayground.vcxproj.filters  camera.cpp  camera.h  pch.h  scene.cpp  scene.h
OptimizationPlayground/shaders/: frag.spv  instance_frag.spv  instance_shader.frag  instance_shader.vert
OptimizationPlayground/x64/Debug/: OptimizationPlayground.exe.recipe  vc143.idb
OptimizationPlayground/x64/Debug/Optimiza.7a378de7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OptimizationPlayground.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
VulVoxOptimizationProject/: CMakeLists.txt  TODO.txt  VulVoxOptimizationProject.vcxproj  VulVoxOptimizationProject.vcxproj.filters  Vulkan_Window.cpp  imgui_context.cpp  imgui_context.h  instance_data.cpp  instance_data.h  main.cpp  model.cpp  model.h  mvp.cpp  mvp.h  mvp_handler.cpp  mvp_handler.h  pch.cpp  pch.h  renderer.cpp  renderer.h  texture_array_index_binding.cpp  texture_array_index_binding.h  utils.h  vertex.cpp  vertex.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffer_manager.cpp  vulkan_buffer_manager.h  vulkan_command_pool.cpp  vulkan_command_pool.h  vulkan_engine.cpp  vulkan_engine.h  vulkan_image.cpp  vulkan_image.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swap_chain.cpp  (+3 more)
VulVoxOptimizationProject/shaders/: compile_shaders.bat  frag.spv  instance_frag.spv  instance_shader.frag  instance_shader.vert  instance_vert.spv  triangle_shader.frag  triangle_shader.vert  vert.spv
shaders/: compile_shaders.bat  frag.spv  instance_frag.spv  instance_plane.vert  instance_plane_vert.spv  instance_shader.frag  instance_shader.vert  instance_tex_array_frag.spv  instance_tex_array_shader.frag  instance_tex_array_shader.vert  instance_vert.spv  triangle_shader.frag  triangle_shader.vert
